force-app/main/default/objects/Field_Sales_App_Setting__c/Field_Sales_App_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Field Sales App Setting</label>
</CustomObject>