force-app/main/default/objects/Field_Sales_App_Setting__c/fields/AccountRadius__c.field-meta.xml
<CustomField>
    <fullName>AccountRadius__c</fullName>
    <label>AccountRadius</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>