force-app/main/default/objects/Field_Sales_App_Setting__c/fields/DefaultLocation__c.field-meta.xml
<CustomField>
    <fullName>DefaultLocation__c</fullName>
    <label>DefaultLocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>