force-app/main/default/objects/Field_Sales_App_Setting__c/fields/FieldSalesNewBusinessStatus__c.field-meta.xml
<CustomField>
    <fullName>FieldSalesNewBusinessStatus__c</fullName>
    <label>FieldSalesNewBusinessStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>