force-app/main/default/objects/Field_Sales_App_Setting__c/fields/FieldSalesPendingStatus__c.field-meta.xml
<CustomField>
    <fullName>FieldSalesPendingStatus__c</fullName>
    <label>FieldSalesPendingStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>