force-app/main/default/objects/Field_Sales_App_Setting__c/fields/FieldSalesVisitedStatus__c.field-meta.xml
<CustomField>
    <fullName>FieldSalesVisitedStatus__c</fullName>
    <label>FieldSalesVisitedStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>